# TLP_2025-2

./: .gitignore  GRAMMAR.ebnf  INSTALL.txt  LANGUAGE_SPEC.md  README.md  README.txt  RUN_BRICK_GAMES.BAT  RUN_GAME.BAT  TESTS.md  ast_parser.hpp  compiler.py  engine.py  lexer.c++  lexer.py  main.cpp  main.py  parser_main.cpp  requirements.txt  resultados.txt  runtime.py  semantics.hpp  snake.symbols.json
bnf/: snake.bnf  tetris.bnf
docs/: API.md  DSL_REFERENCE.md  LANGUAGE_SPEC.md  TESTS.md  TOKENS.md  tokens_list.txt
dsl/: brik.py  brik_parser.py  brikc.py  lexer.py  symbols.py
engine/src/: CMakeLists.txt  DemoMain.cpp  Engine.cpp  Engine.hpp  GameFactory.cpp  GameFactory.hpp  IGame.hpp  Input.cpp  Input.hpp  RulesBrick.cpp  RulesSnake.cpp  RulesTetris.cpp
games/: base_game.py  snake.brik  snake_game.py  tetris.brik  tetris_game.py
output/: resultados.txt  snake.ast.txt  tetris.ast.txt
screenshots/: README.md
specs/: snake.brik  snake.json  tetris.brik  tetris.json
src/: ast_parser.hpp  lexer.c++  main.cpp  semantics.hpp
